--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 
 	<modelVersion>1.0.0</modelVersion>
 	<packaging>jar</packaging>
-	<groupId>chris.pattern</groupId>
-	<artifactId>pattern</artifactId>
+	<groupId>chris</groupId>
+	<artifactId>chris.pattern</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>Pattern</name>
 	<description>23 pattern.</description>
