--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 		<version>5</version>
 	</parent>
 
-	<modelVersion>1.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
 	<groupId>chris</groupId>
-	<artifactId>chris.pattern</artifactId>
+	<artifactId>chris-pattern</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>Pattern</name>
+	<name>chris-pattern</name>
 	<description>23 pattern.</description>
 	<url>https://github.com/asiachrispy/achris/</url>
 
@@ -20,8 +20,8 @@
 			<name>pattern Mailing List</name>
 			<post>asiachrispy@gmail.com</post>
 			<archive>
-        http://asiachrispy.github.com/tec/
-      </archive>
+                http://asiachrispy.github.com/tec/
+            </archive>
 		</mailingList>
 	</mailingLists>
 
