--- a/common/pom.xml
+++ b/common/pom.xml
@@ -44,24 +44,24 @@
 
     <dependencies>
         <!--<dependency>-->
-            <!--<groupId>com.dajie.common</groupId>-->
-            <!--<artifactId>dajie-common-config</artifactId>-->
-            <!--<optional>true</optional>-->
+        <!--<groupId>com.dajie.common</groupId>-->
+        <!--<artifactId>dajie-common-config</artifactId>-->
+        <!--<optional>true</optional>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>com.dajie.common</groupId>-->
-            <!--<artifactId>dajie-common-file</artifactId>-->
-            <!--<optional>true</optional>-->
+        <!--<groupId>com.dajie.common</groupId>-->
+        <!--<artifactId>dajie-common-file</artifactId>-->
+        <!--<optional>true</optional>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>com.dajie.common</groupId>-->
-            <!--<artifactId>dajie-common-guice</artifactId>-->
-            <!--<optional>true</optional>-->
+        <!--<groupId>com.dajie.common</groupId>-->
+        <!--<artifactId>dajie-common-guice</artifactId>-->
+        <!--<optional>true</optional>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>com.dajie.common</groupId>-->
-            <!--<artifactId>dajie-common-util</artifactId>-->
-            <!--<optional>true</optional>-->
+        <!--<groupId>com.dajie.common</groupId>-->
+        <!--<artifactId>dajie-common-util</artifactId>-->
+        <!--<optional>true</optional>-->
         <!--</dependency>-->
         <!-- third libs -->
         <dependency>
@@ -102,6 +102,41 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>14.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
         </dependency>
     </dependencies>
 </project>
